Unclear why these are showing up as changed when diff shows no changes???

--- a/notebooks/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb
+++ b/notebooks/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,24 +279,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-1,  2,  3,  4,  0],\n",
-       "       [ 0, -1,  0,  2,  0],\n",
-       "       [ 0,  0,  1,  0,  0],\n",
-       "       [ 0,  0,  0, -1,  0],\n",
-       "       [ 2,  4,  5,  8,  1]])"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from redblackgraph.reference import transitive_closure\n",
     "R = [[-1,  2,  3,  0,  0],\n",
@@ -345,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,20 +683,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 1, 1, 2, 1, 2]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from redblackgraph.reference.components import find_components\n",
     "R = [[-1, 0, 0, 2, 0, 3, 0],\n",
@@ -741,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -897,26 +871,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-1,  3,  0,  2,  0,  0,  0],\n",
-       "       [ 0,  1,  0,  0,  0,  0,  0],\n",
-       "       [ 0,  0,  1,  0,  2,  4,  5],\n",
-       "       [ 0,  0,  0, -1,  0,  0,  0],\n",
-       "       [ 0,  0,  0,  0, -1,  2,  3],\n",
-       "       [ 0,  0,  0,  0,  0, -1,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  1]])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from redblackgraph.reference.triangularization import triangularize\n",
     "triangularize(transitive_closure(R).W).A"
@@ -997,33 +954,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A_star:\n",
-      "[[-1  2  3  0  0  4  5  6  7  0  0  8  9 12 13]\n",
-      " [ 0 -1  0  0  0  2  3  0  0  0  0  4  5  0  0]\n",
-      " [ 0  0  1  0  0  0  0  2  3  0  0  0  0  4  5]\n",
-      " [ 0  0  0  1  0  0  0  0  0  0  0  0  0  0  0]\n",
-      " [ 0  2  0  3 -1  4  5  0  0  0  0  8  9  0  0]\n",
-      " [ 0  0  0  0  0 -1  0  0  0  0  0  2  3  0  0]\n",
-      " [ 0  0  0  0  0  0  1  0  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0 -1  0  0  0  0  0  2  3]\n",
-      " [ 0  0  0  0  0  0  0  0  1  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  2  0 -1  3  0  0  4  5]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  1  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0 -1  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0  1  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0  0 -1  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0  0  0  1]] \n",
-      "diameter: 3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import redblackgraph.reference as smp\n",
@@ -1060,32 +993,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A1_star:\n",
-      "[[-1  2  3  0  0  4  5  7  0  0  8  9  0  0]\n",
-      " [ 0 -1  0  0  0  2  3  0  0  0  4  5  0  0]\n",
-      " [ 0  0  1  0  0  0  0  3  0  0  0  0  0  0]\n",
-      " [ 0  0  0  1  0  0  0  0  0  0  0  0  0  0]\n",
-      " [ 0  2  0  3 -1  4  5  0  0  0  8  9  0  0]\n",
-      " [ 0  0  0  0  0 -1  0  0  0  0  2  3  0  0]\n",
-      " [ 0  0  0  0  0  0  1  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  1  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0 -1  3  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  1  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0 -1  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  1  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0 -1  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0  0  1]] \n",
-      "diameter: 3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#       D   E   R   M   H  Mi   A   I  Do  Ev   G  Ma   S  Em\n",
     "A1 = [[-1,  2,  3,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0], # D\n",
@@ -1119,34 +1029,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[-1, 2, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 12, 13, 6],\n",
-       " [0, -1, 0, 0, 0, 2, 3, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       " [0, 0, 1, 0, 0, 0, 0, 3, 0, 0, 0, 0, 4, 5, 2],\n",
-       " [0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       " [0, 2, 0, 3, -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0, -1, 0, 0, 0, 0, 2, 3, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0, 0, 0, 0, -1, 3, 0, 0, 4, 5, 2],\n",
-       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, 0, 0],\n",
-       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0],\n",
-       " [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 3, -1]]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#      D   E   R   M   H  Mi   A   I  Do  Ev   G  Ma   S  Em\n",
     "u = [[ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  2,  3]] \n",
@@ -1179,34 +1064,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-1,  2,  3,  0,  0,  4,  5,  7,  0,  0,  8,  9, 12, 13,  6],\n",
-       "       [ 0, -1,  0,  0,  0,  2,  3,  0,  0,  0,  4,  5,  0,  0,  0],\n",
-       "       [ 0,  0,  1,  0,  0,  0,  0,  3,  0,  0,  0,  0,  4,  5,  2],\n",
-       "       [ 0,  0,  0,  1,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
-       "       [ 0,  2,  0,  3, -1,  4,  5,  0,  0,  0,  8,  9,  0,  0,  0],\n",
-       "       [ 0,  0,  0,  0,  0, -1,  0,  0,  0,  0,  2,  3,  0,  0,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  1,  0,  0,  0,  0,  0,  0,  0,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  0,  1,  0,  0,  0,  0,  0,  0,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  0,  0, -1,  3,  0,  0,  4,  5,  2],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  1,  0,  0,  0,  0,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0, -1,  0,  0,  0,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  1,  0,  0,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0, -1,  0,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  1,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  2,  3, -1]])"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#        D   E   R   M   H  Mi   A   I  Do  Ev   G  Ma   S  Em   J\n",
     "R1 = [[ -1,  2,  3,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0],  # D\n",
@@ -1240,17 +1100,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7.16 ms ± 121 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%timeit\n",
     "B1 = copy.deepcopy(A1)\n",
@@ -1259,17 +1111,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "546 µs ± 13.2 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%timeit\n",
     "A_lambda = smp.vertex_relational_composition(u, A1, v, -1)"
@@ -1277,17 +1121,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "561 µs ± 24.2 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%timeit\n",
     "A_lambda = smp.edge_relational_composition(R, 2, 14, 2)"
@@ -1303,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1329,33 +1165,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A_star:\n",
-      "[[-1  2  3  0  0  4  5  6  7  0  0  8  9 12 13]\n",
-      " [ 0 -1  0  0  0  2  3  0  0  0  0  4  5  0  0]\n",
-      " [ 0  0  1  0  0  0  0  2  3  0  0  0  0  4  5]\n",
-      " [ 0  0  0  1  0  0  0  0  0  0  0  0  0  0  0]\n",
-      " [ 0  2  0  3 -1  4  5  0  0  0  0  8  9  0  0]\n",
-      " [ 0  0  0  0  0 -1  0  0  0  0  0  2  3  0  0]\n",
-      " [ 0  0  0  0  0  0  1  0  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0 -1  0  0  0  0  0  2  3]\n",
-      " [ 0  0  0  0  0  0  0  0  1  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  2  0 -1  3  0  0  4  5]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  1  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0 -1  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0  1  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0  0 -1  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0  0  0  1]] \n",
-      "diameter: 3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "result = A.transitive_closure()\n",
     "print(f\"A_star:\\n{result.W} \\ndiameter: {result.diameter}\")"
@@ -1371,32 +1183,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A1_star:\n",
-      "[[-1  2  3  0  0  4  5  7  0  0  8  9  0  0]\n",
-      " [ 0 -1  0  0  0  2  3  0  0  0  4  5  0  0]\n",
-      " [ 0  0  1  0  0  0  0  3  0  0  0  0  0  0]\n",
-      " [ 0  0  0  1  0  0  0  0  0  0  0  0  0  0]\n",
-      " [ 0  2  0  3 -1  4  5  0  0  0  8  9  0  0]\n",
-      " [ 0  0  0  0  0 -1  0  0  0  0  2  3  0  0]\n",
-      " [ 0  0  0  0  0  0  1  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  1  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0 -1  3  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  1  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0 -1  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  1  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0 -1  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0  0  1]] \n",
-      "diameter: 3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#                D   E   R   M   H  Mi   A   I  Do  Ev   G  Ma   S  Em\n",
     "A1 = rb.array([[-1,  2,  3,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0], # D\n",
@@ -1430,49 +1219,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "u_lambda:\n",
-      "[[0 0 0 0 0 0 0 0 0 0 0 0 2 3]]\n",
-      "v_lambda:\n",
-      "[[6]\n",
-      " [0]\n",
-      " [2]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [2]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]]\n",
-      "A_lambda:\n",
-      "[[-1  2  3  0  0  4  5  7  0  0  8  9 12 13  6]\n",
-      " [ 0 -1  0  0  0  2  3  0  0  0  4  5  0  0  0]\n",
-      " [ 0  0  1  0  0  0  0  3  0  0  0  0  4  5  2]\n",
-      " [ 0  0  0  1  0  0  0  0  0  0  0  0  0  0  0]\n",
-      " [ 0  2  0  3 -1  4  5  0  0  0  8  9  0  0  0]\n",
-      " [ 0  0  0  0  0 -1  0  0  0  0  2  3  0  0  0]\n",
-      " [ 0  0  0  0  0  0  1  0  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  1  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0 -1  3  0  0  4  5  2]\n",
-      " [ 0  0  0  0  0  0  0  0  0  1  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0 -1  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  1  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0 -1  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0  0  1  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0  0  2  3 -1]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#               D   E   R   M   H  Mi   A   I  Do  Ev   G  Ma   S  Em\n",
     "u = rb.array([[ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  2,  3]], dtype=np.int32) \n",
@@ -1511,34 +1260,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-1,  2,  3,  0,  0,  4,  5,  7,  0,  0,  8,  9, 12, 13,  6],\n",
-       "       [ 0, -1,  0,  0,  0,  2,  3,  0,  0,  0,  4,  5,  0,  0,  0],\n",
-       "       [ 0,  0,  1,  0,  0,  0,  0,  3,  0,  0,  0,  0,  4,  5,  2],\n",
-       "       [ 0,  0,  0,  1,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
-       "       [ 0,  2,  0,  3, -1,  4,  5,  0,  0,  0,  8,  9,  0,  0,  0],\n",
-       "       [ 0,  0,  0,  0,  0, -1,  0,  0,  0,  0,  2,  3,  0,  0,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  1,  0,  0,  0,  0,  0,  0,  0,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  0,  1,  0,  0,  0,  0,  0,  0,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  0,  0, -1,  3,  0,  0,  4,  5,  2],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  1,  0,  0,  0,  0,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0, -1,  0,  0,  0,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  1,  0,  0,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0, -1,  0,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  1,  0],\n",
-       "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  2,  3, -1]])"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#                 D   E   R   M   H  Mi   A   I  Do  Ev   G  Ma   S  Em   J\n",
     "R1 = rb.array([[ -1,  2,  3,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0],  # D\n",
@@ -1572,17 +1296,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "23.8 µs ± 140 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%timeit\n",
     "result = A.transitive_closure()\n",
@@ -1591,17 +1307,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "14.7 µs ± 305 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%timeit\n",
     "A_lambda = A1_star.vertex_relational_composition(u, v, -1)"
@@ -1609,17 +1317,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7.41 µs ± 396 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%timeit\n",
     "A_lambda = R.edge_relational_composition(2, 14, 2)"
@@ -1634,20 +1334,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9999999999999998"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from numpy.linalg import det\n",
     "det(A_lambda)"
@@ -1655,20 +1344,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'red': 8, 'black': 7}"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "A_lambda.cardinality()"
    ]
@@ -1682,22 +1360,9 @@
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
