--- a/notebooks/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb
+++ b/notebooks/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "When representing binary relationships, such as familial relationships, a number of approaches may be utilized including: ad-hoc, general graphs, specialized tables or charts. As I've explored different representations, a specialized mathematical representation has emerged. This mathematical representation is useful as the underpinnings of dynamic graph algorithms for use cases that include graph analysis, relationship calculation, loop detection, loop prevention, etc. \n",
     "\n",
-    "The underlying mathematical model is a directed, acyclic graph of multiple, interleaved binary trees, designated as a Red Black Graph. The name, Red Black Graph, derives from superficial similarity to Red Black Trees. Red Black Trees are binary trees such that each node has an extra, color bit (red or black). This color bit us used to balance the tree as modifications are made. In a Red Black Graph each vertex also has a an extra, color bit, rather than utilizing the color bit for balancing, the color bit is used to constrain edges between vertices.\n",
+    "The underlying mathematical model is a directed, acyclic graph of multiple, interleaved binary trees, designated as a Red Black Graph. The name, Red Black Graph, derives from superficial similarity to Red Black Trees. Red Black Trees are binary trees such that each node has an extra, color bit (red or black). This color bit is used to balance the tree as modifications are made. In a Red Black Graph each vertex also has a an extra, color bit, rather than utilizing the color bit for balancing, the color bit is used to constrain edges between vertices.\n",
     "\n",
     "I will provide a formal definition of a Red Black Graph, as well as explore a number of interesting emergent properties. I will also examine several applications of Red Black Graphs to illustrate the utility of using this mathematical model for familial relationships.\n",
     "\n",
@@ -68,7 +68,7 @@
    "source": [
     "## Adjacency Matrix\n",
     "\n",
-    "An adjacency matrix is a square matrix used to represent a graph. The elements of the matrix are 1 (or edge weight) if there is an edge between the vertices represented by the column index and the row index. Slightly more formally, for $G$ with a vertex set $V$, the adjacency matrix is a square $|V|$ x $|V|$ matrix, $A$, such that $A_{ij}$ is one if there exists an edge from $\\mathbf{i}$ to $\\mathbf{j}$ and zero otherwise.\n",
+    "An adjacency matrix is a square matrix used to represent a graph. The elements of the matrix are 1 (or edge weight) if there is an edge between the vertices represented by the column index and the row index. Slightly more formally, for $G$ with a vertex set $V$, the adjacency matrix is a square $|V|$ x $|V|$ matrix, $A$, such that $A_{ij}$ is $1$ if there exists an edge from $\\mathbf{i}$ to $\\mathbf{j}$ and $0$ otherwise.\n",
     "\n",
     "Given the above example graph and chosing indices for the vertices as follows: 0 - Female Offspring, 1 - Male Offspring, 2 - Male Progenitor, 3 - Female Progenitor, the graph would be represented by the following adjacency matrix.\n",
     "\n",
@@ -81,7 +81,7 @@
     "\n",
     "## Red Black Graph Adjacency Matrix\n",
     "\n",
-    "I'll define the adjacency matrix for a Red Black Graph only slightly differently. $R_{ij}=r(\\mathbf{i}, \\mathbf{j})$ if there is an edge from $\\mathbf{i}$ to $\\mathbf{j}$ and zero otherwise. The following is the Red Black adjacency matrix for the above example graph.\n",
+    "I'll define the adjacency matrix for a Red Black Graph only slightly differently. $R_{ij}=r(\\mathbf{i}, \\mathbf{j})$ if there is an edge from $\\mathbf{i}$ to $\\mathbf{j}$ and $0$ otherwise. The following is the Red Black adjacency matrix for the above example graph.\n",
     "\n",
     "$$R = \\begin{bmatrix}\n",
     "1 & 0 & 2 & 3 \\\\\n",
@@ -109,7 +109,7 @@
     "\n",
     "Computing the transitive closure of an adjacency matrix, $A$, results in the reachability a matrix, $A^+$, that shows all vertices that are reachable from any given vertex. If $A_{ij} == 1$ there is a path from $\\mathbf{v}_i$ to $\\mathbf{v}_j$.\n",
     "\n",
-    "The transitive closure of a Red Black adjacency matrix, $R$, is defined to be the relationship matrix, $R^+$. In addition to reacability, $R^+$ is defined in such that if $R^+_{ij} == \\mathbf{n}$ and $\\mathbf{n}$ is non-zero, then from $\\mathbf{n}$ we can derive both the path lengh and the explicit traversal path from $\\mathbf{i}$ to $\\mathbf{j}$.\n",
+    "The transitive closure of a Red Black adjacency matrix, $R$, is defined to be the relationship matrix, $R^+$. In addition to reachability, $R^+$ is defined in such that if $R^+_{ij} == \\mathbf{n}$ and $\\mathbf{n}$ is non-zero, then from $\\mathbf{n}$ we can derive both the path lengh and the explicit traversal path from $\\mathbf{i}$ to $\\mathbf{j}$.\n",
     "\n",
     "As an example consider the following graph, where each node has been labeled with a vertex index:\n",
     "\n",
@@ -135,7 +135,7 @@
     "Before examining how to generate $R^+$ from $R$, consider the following observations:\n",
     "\n",
     "* $r(\\mathbf{u},\\mathbf{v})$ is even when $\\mathbf{v}$ is red and odd when black. (By convention $-1$ is considered even.)\n",
-    "* The path length is inherent in $r(\\mathbf{u},\\mathbf{v})$, and is trivially derived by taking the integral portion of $log_{2}$ of $r(\\mathbf{u},\\mathbf{v})$.\n",
+    "* The path length is inherent in $r(\\mathbf{u},\\mathbf{v})$, and is trivially derived by taking the integral portion of $log_{2}(r(\\mathbf{u},\\mathbf{v}))$.\n",
     "* The traversal path is also inherent in $r(\\mathbf{u},\\mathbf{v})$ and can be derived by reversing $r$'s defintion and successively right shifting out bits (of a $base_2$ integer representation) and using that bit to \"walk\" the traversal edge to a red vertex or black vertex.\n",
     "* The diameter of $R^+$ is given by $log_{2}(max(r(\\mathbf{u},\\mathbf{v})))$."
    ]
@@ -151,7 +151,7 @@
     "### Avos Product\n",
     "The first step requires defining a transitive relationship function. To illustrate, consider 3 vertices: $\\mathbf{u}$, $\\mathbf{v}$ and $\\mathbf{w}$. Further, assume that there is a path from $\\mathbf{u}$ to $\\mathbf{v}$ and from $\\mathbf{v}$ to $\\mathbf{w}$. I'll define the function, $f(r(\\mathbf{u},\\mathbf{v}),r(\\mathbf{v},\\mathbf{w}))\\rightarrow r(\\mathbf{u},\\mathbf{w})$, as the *avos product* and designate it using $\\star$, e.g. $r(\\mathbf{u},\\mathbf{w})=r(\\mathbf{u},\\mathbf{v}) \\star r(\\mathbf{v},\\mathbf{w})$.\n",
     "\n",
-    "If $r(\\mathbf{u},\\mathbf{v})=4$ ($\\mathbf(v)$ is $\\mathbf{u}$'s paternal grandfather) and $r(\\mathbf{v},\\mathbf{2})=7$ ($\\mathbf(w)$ is $\\mathbf{v}$'s maternal grandmother). Using either the defintion of $r$ or transcribing $\\mathbf{v}$'s pedigree into the proper place in $\\mathbf{u}$'s pedigree chart we see that $r(\\mathbf{u},\\mathbf{w})=19$, or $19 = 4 \\star 7$. To further explore this consider the following ($r(\\mathbf{x},\\mathbf{y})$ represented in base-2 for illustrative purposes):\n",
+    "If $r(\\mathbf{u},\\mathbf{v})=4$ ($\\mathbf{v}$ is $\\mathbf{u}$'s paternal grandfather) and $r(\\mathbf{v},\\mathbf{w})=7$ ($\\mathbf{w}$ is $\\mathbf{v}$'s maternal grandmother). Using either the defintion of $r$ or transcribing $\\mathbf{v}$'s pedigree into the proper place in $\\mathbf{u}$'s pedigree chart we see that $r(\\mathbf{u},\\mathbf{w})=19$, or $19 = 4 \\star 7$. To further explore this consider the following ($r(\\mathbf{x},\\mathbf{y})$ represented in base-2 for illustrative purposes):\n",
     "\n",
     "| $\\mathbf{v}$'s relationship to $\\mathbf{u}$  | $\\mathbf{w}$'s relationship to $\\mathbf{v}$ | $r(\\mathbf{u},\\mathbf{v})$ | $r(\\mathbf{v},\\mathbf{w})$ | $r(\\mathbf{u},\\mathbf{w})$ |\n",
     "| ---------------------- | --------------------- | --------- | -------- | --------- |\n",
@@ -160,15 +160,17 @@
     "| mother                 | father                | 11        | 10       | 110       |\n",
     "| mother                 | mother                | 11        | 11       | 111       |\n",
     "| father                 | paternal grandfather  | 10        | 100      | 1000      |\n",
-    "| maternal grandmother   | paternal grandfather  | 111       | 100      | 11100     |\n",
+    "| maternal grandmother   | paternal grandfather  | 111 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; | 100 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; | 11100 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; |\n",
     "\n",
-    "While perhaps not obvious, upon examination of the binary representation, the avos product simply replaces the most significant bit of $r(\\mathbf{v},\\mathbf{w})$ with the value of $r(\\mathbf{u},\\mathbf{v})$. A few convensions are required:\n",
+    "While perhaps not obvious, upon examination of the binary representation, the avos product simply replaces the most significant bit of $r(\\mathbf{v},\\mathbf{w})$ with the value of $r(\\mathbf{u},\\mathbf{v})$. \n",
+    "\n",
+    "To complete the definiton of the Avos Product, the following conventions are required:\n",
     "1. $-1 = -1 \\star 1$\n",
     "2. $-1 = 1 \\star -1$\n",
     "3. For all other cases, $-1$ is treated as $1$\n",
     "\n",
     "### Avos Sum\n",
-    "It is natural to pair multiplication with addition for linear algebra operations (matrix multiplication, matrix distance product, etc.) a min-avos product pairing conforms to the definition of Red Black Graphs with a slight modification required for implementation in a typical RAM computer, namely $-1=2^\\mathbf{w}-1$, where $\\mathbf{w}$ is the word size of the numeric type. As, aside from $-1$, the range of $r(\\mathbf{u},\\mathbf{v})$ is $\\mathbb{N}$, it is natural to utilize unsigned numeric types (in a strongly typed language). Additionally, I use the convention $min(0)=\\infty$. The min function needs to be aware of both these conventions. I'll define this modification of typical min as the *avos sum* and designate it using $\\dagger$. \n",
+    "It is natural to pair multiplication with addition for linear algebra operations (matrix multiplication, matrix distance product, etc.) a min-avos product pairing conforms to the definition of Red Black Graphs with a slight modification required for implementation in a typical RAM computer, namely $-1=2^\\mathbf{w}-1$, where $\\mathbf{w}$ is the word size of the numeric type. As, aside from $-1$, the range of $r(\\mathbf{u},\\mathbf{v})$ is $\\mathbb{N}$, it is natural to utilize unsigned numeric types (in a strongly typed language). Additionally, I use the convention $min(0)=\\infty$. The min function needs to be aware of both these conventions. These conventions define *avos sum* which is designated by $\\dagger$, e.g. $-1 = -1 \\dagger 5$ and $2 = 37 \\dagger 2$ and $3 = 0 \\dagger 3$.\n",
     "\n",
     "### Reference Implementation of Avos Arithmetic\n"
    ]
@@ -1360,9 +1362,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "pygments_lexer": "ipython3"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
