docs: add appendix C header to related work section in RBG notebook

--- a/notebooks/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb
+++ b/notebooks/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb
@@ -1364,6 +1364,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Appendix C\n",
     "## Related Work\n",
     "\n",
     "The Red-Black Graph (RBG) formalism—directed acyclic graphs with per-vertex colors and the restriction of at most one outgoing edge per color—intersects with several established areas of graph theory and applied data structures.\n",
